--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,2 @@
-jwcrypto==0.6.0
-pyyaml==5.1.2
-tornado==6.0.3
-click==7.0
-requests==2.22.0
-pretty-bad-protocol==3.1.1
-sqlalchemy==1.3.8
-psycopg2==2.8.3
-python-magic==0.4.15
+-e .[dev]
 -e git://github.com/unioslo/tsd-api-client.git#egg=tsd-api-client
-humanfriendly==4.18
-progress==1.5
-pandas==0.25.1
-termcolor==1.1.0
-libnacl==1.7.1
-pika==1.1.0
